// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles ON_AUTH 1`] = `
Object {
  "email": "foo@example.com",
}
`;

exports[`handles ON_AUTH 2`] = `
Object {
  "user": undefined,
}
`;

exports[`has an initial state 1`] = `null`;
